--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -6,6 +6,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/" source-path="/iss/main/webapp"/>
         <wb-resource deploy-path="/" source-path="/iss/target"/>
+        <wb-resource deploy-path="/" source-path="/currencyConverter/target"/>
         <property name="java-output-path" value="/iss/target/classes"/>
         <property name="context-root" value="converter"/>
     </wb-module>
